# artichoke

./: Cargo.toml  Makefile  README.md
app/: .metadata  README.md  pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/debug/: AndroidManifest.xml
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/bltavares/app/: MainActivity.kt
app/android/app/src/main/kotlin/com/bltavares/artichoke/: MainActivity.kt
app/android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_splash.xml  launch_background.xml
app/android/gradle/wrapper/: gradle-wrapper.properties
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/src/: app.dart  ffi.dart  home.dart  multilinks.dart  reader.dart
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp  window_configuration.cpp
ffi/: Cargo.toml
ffi/src/: lib.rs
scripts/: id_rsa.enc  travis-doc-upload.cfg
src/: lib.rs  main.rs
tests/: integration.rs  parsing.rs
tests/resources/html/: blog-bltavares.html  blog-rustlang.html
tests/resources/md/: blog-bltavares.md  blog-rustlang.md
