[package]
name = 'artichoke'
version = '0.1.0'
authors = ['Bruno Tavares <connect+github@bltavares.com>']
edition = '2018'

[features]
default = ['cli']
cli = [
    'clap',
    'env_logger',
]

[workspace]
members = ['ffi']

[dependencies]
kuchiki = '0.8.1'
html2md = '0.2.10'
html5ever = '0.25.1'
toml = '0.5.6'
ureq = '1.4.0'
log = '0.4.11'

[dependencies.env_logger]
version = '0.7.1'
optional = true

[dependencies.clap]
version = '3.0.0-beta.1'
optional = true

[dependencies.serde]
version = '1.0'
features = ['derive']

[dev-dependencies]
test-generator = '0.3.0'
